--- a/Part_2/handson_2/handson_2a.ipynb
+++ b/Part_2/handson_2/handson_2a.ipynb
@@ -309,7 +309,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['size'] = df['size'].map(size)"
+   ]
   },
   {
    "cell_type": "markdown",
