--- a/Part_2/handson_2/handson_2a.ipynb
+++ b/Part_2/handson_2/handson_2a.ipynb
@@ -542,7 +542,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['gender'] = df['gender'].str.upper()\n",
+    "df2 "
+   ]
   },
   {
    "cell_type": "markdown",
