--- a/Part_2/handson_2/handson_2b.ipynb
+++ b/Part_2/handson_2/handson_2b.ipynb
@@ -65,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn1 acurracy: 61.33%\n"
+     ]
+    }
+   ],
    "source": [
     "knn1 = KNeighborsClassifier().fit(X1_train, y_train)\n",
     "print(f'knn1 acurracy: {knn1.score(X1_test, y_test):.2%}')"
