--- a/Part_2/handson_2/handson_2b.ipynb
+++ b/Part_2/handson_2/handson_2b.ipynb
@@ -93,7 +93,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scl = MinMaxScaler()\n",
+    "X2_train = scl.fit_transform(X1_train)\n",
+    "X2_test = scl.transform(X1_test)"
+   ]
   },
   {
    "cell_type": "markdown",
