--- a/Part_2/handson_2/handson_2b.ipynb
+++ b/Part_2/handson_2/handson_2b.ipynb
@@ -129,13 +129,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn2 acurracy: 97.33%\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn2 = KNeighborsClassifier().fit(X2_train, y_train)\n",
+    "print(f'knn2 acurracy: {knn2.score(X2_test, y_test):.2%}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "knn2 = KNeighborsClassifier().fit(X2_train, y_train)\n",
-    "print(f'knn2 acurracy: {knn1.score(X1_test, y_test):.2%}')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
