--- a/Part_2/handson_2/handson_2b.ipynb
+++ b/Part_2/handson_2/handson_2b.ipynb
@@ -147,6 +147,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: scikit-learn\n",
+      "Version: 1.1.3\n",
+      "Summary: A set of python modules for machine learning and data mining\n",
+      "Home-page: http://scikit-learn.org\n",
+      "Author: \n",
+      "Author-email: \n",
+      "License: new BSD\n",
+      "Location: c:\\users\\wooihaw\\anaconda3\\envs\\anaconda202210\\lib\\site-packages\n",
+      "Requires: joblib, numpy, scipy, threadpoolctl\n",
+      "Required-by: scikit-learn-intelex\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip show scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
