--- a/Part_3/handson_3/handson_3a.ipynb
+++ b/Part_3/handson_3/handson_3a.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,6 @@
        "      <th></th>\n",
        "      <th>Height(cm)</th>\n",
        "      <th>Weight(kg)</th>\n",
-       "      <th>Gender_Female</th>\n",
        "      <th>Gender_Male</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -141,40 +140,34 @@
        "      <th>0</th>\n",
        "      <td>187.6</td>\n",
        "      <td>109.7</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>174.7</td>\n",
        "      <td>73.6</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>188.2</td>\n",
        "      <td>96.5</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>182.2</td>\n",
        "      <td>99.8</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>177.5</td>\n",
        "      <td>93.6</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -183,67 +176,63 @@
        "      <th>9995</th>\n",
        "      <td>168.1</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9996</th>\n",
        "      <td>170.4</td>\n",
        "      <td>77.5</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9997</th>\n",
        "      <td>162.2</td>\n",
        "      <td>58.3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9998</th>\n",
        "      <td>175.3</td>\n",
        "      <td>74.3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
        "      <td>157.3</td>\n",
        "      <td>51.6</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 4 columns</p>\n",
+       "<p>10000 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Height(cm)  Weight(kg)  Gender_Female  Gender_Male\n",
-       "0          187.6       109.7              0            1\n",
-       "1          174.7        73.6              0            1\n",
-       "2          188.2        96.5              0            1\n",
-       "3          182.2        99.8              0            1\n",
-       "4          177.5        93.6              0            1\n",
-       "...          ...         ...            ...          ...\n",
-       "9995       168.1        62.0              1            0\n",
-       "9996       170.4        77.5              1            0\n",
-       "9997       162.2        58.3              1            0\n",
-       "9998       175.3        74.3              1            0\n",
-       "9999       157.3        51.6              1            0\n",
+       "      Height(cm)  Weight(kg)  Gender_Male\n",
+       "0          187.6       109.7            1\n",
+       "1          174.7        73.6            1\n",
+       "2          188.2        96.5            1\n",
+       "3          182.2        99.8            1\n",
+       "4          177.5        93.6            1\n",
+       "...          ...         ...          ...\n",
+       "9995       168.1        62.0            0\n",
+       "9996       170.4        77.5            0\n",
+       "9997       162.2        58.3            0\n",
+       "9998       175.3        74.3            0\n",
+       "9999       157.3        51.6            0\n",
        "\n",
-       "[10000 rows x 4 columns]"
+       "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = get_dummies(df)\n",
-    "df2"
+    "df2 = get_dummies(df, drop_first=True)\n",
+    "y2 = df2['Weight(kg)'].values\n",
+    "del df2['Weight(kg)']"
    ]
   },
   {
