--- a/Part_3/handson_3/handson_3b.ipynb
+++ b/Part_3/handson_3/handson_3b.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a589516f",
    "metadata": {},
    "outputs": [],
@@ -72,11 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "76c5a1ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dtc1 accuracy:  76.49%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dtc1 = DecisionTreeClassifier(random_state=42).fit(X_train, y_train)\n",
+    "print(f\"dtc1 accuracy: {dtc1.score(X_test, y_test): .2%}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +106,10 @@
    "id": "94b37bb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "params = {}\n",
+    "params['crit']"
+   ]
   },
   {
    "cell_type": "markdown",
