--- a/Part_3/handson_3/handson_3b.ipynb
+++ b/Part_3/handson_3/handson_3b.ipynb
@@ -108,7 +108,11 @@
    "outputs": [],
    "source": [
     "params = {}\n",
-    "params['crit']"
+    "params['criterion'] = ['gini', 'entropy']\n",
+    "params['max_leaf_nodes'] = range(2, 21)\n",
+    "\n",
+    "gs = GridSearchCV(DecisionTreeClassifier(random_state=42), params, cv=5, n_jobs=-1)\n",
+    "gs.fit(X_train, y_train)\n"
    ]
   },
   {
