--- a/Part_3/handson_3/handson_3b.ipynb
+++ b/Part_3/handson_3/handson_3b.ipynb
@@ -136,13 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6a361678",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dtc2 accuracy:  82.09%\n"
+     ]
+    }
+   ],
    "source": [
-    "dtc2 = DecisionTreeClassifier(random_state=42, **gs.best_params_).fit(X_train, y_train)\n"
+    "dtc2 = DecisionTreeClassifier(random_state=42, **gs.best_params_).fit(X_train, y_train)\n",
+    "print(f\"dtc2 accuracy: {dtc2.score(X_test, y_test): .2%}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a6387ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
