--- a/Part_3/handson_3/handson_3c.ipynb
+++ b/Part_3/handson_3/handson_3c.ipynb
@@ -91,7 +91,12 @@
     "models = {}\n",
     "models['knn'] = KNeighborsClassifier()\n",
     "models['lgr'] = LogisticRegression()\n",
-    "models['dtc'] = "
+    "models['dtc'] = DecisionTreeClassifier()\n",
+    "\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "for m in models:\n",
+    "    scores = cross_val_score(models[m], X, y, cv=kf, n_jobs=-1)\n",
+    "    print(f\"{m} mean accuracy\")"
    ]
   },
   {
