--- a/Part_3/handson_3/handson_3c.ipynb
+++ b/Part_3/handson_3/handson_3c.ipynb
@@ -82,10 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "89c13b59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn mean accuracy: 93.669%, std: 2.810%\n",
+      "lgr mean accuracy: 94.372%, std: 2.707%\n",
+      "dtc mean accuracy: 93.675%, std: 2.563%\n"
+     ]
+    }
+   ],
    "source": [
     "# Use spot-checking to evaluate multiple models\n",
     "models = {}\n",
@@ -96,7 +106,7 @@
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "for m in models:\n",
     "    scores = cross_val_score(models[m], X, y, cv=kf, n_jobs=-1)\n",
-    "    print(f\"{m} mean accuracy\")"
+    "    print(f\"{m} mean accuracy: {scores.mean():.3%}, std: {scores.std():.3%}\")"
    ]
   },
   {
