--- a/Part_3/handson_3/handson_3c.ipynb
+++ b/Part_3/handson_3/handson_3c.ipynb
@@ -124,7 +124,14 @@
    "id": "dd8607c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fs = SelectKBest(k=10)\n",
+    "Xs = fs.fit_transform(X, y)\n",
+    "\n",
+    "for m in models:\n",
+    "    scores = cross_val_score(models[m], Xs, y, cv=kf, n_jobs=-1)\n",
+    "    print(f\"{m} mean accuracy: {scores.mean():.3%}, std: {scores.std():.3%}\")"
+   ]
   },
   {
    "cell_type": "markdown",
