--- a/Part_3/handson_3/handson_3c.ipynb
+++ b/Part_3/handson_3/handson_3c.ipynb
@@ -154,15 +154,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8585e37c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn mean accuracy: 93.669%, std: 2.810%\n",
+      "lgr mean accuracy: 95.426%, std: 1.529%\n",
+      "dtc mean accuracy: 91.914%, std: 3.486%\n"
+     ]
+    }
+   ],
    "source": [
     "dr = PCA(n_components=10)\n",
     "Xr = dr.fit_transform(X)\n",
-    "\n"
+    "\n",
+    "for m in models:\n",
+    "    scores = cross_val_score(models[m], Xr, y, cv=kf, n_jobs=-1)\n",
+    "    print(f\"{m} mean accuracy: {scores.mean():.3%}, std: {scores.std():.3%}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a785b71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
