--- a/Part_3/handson_3/handson_3d.ipynb
+++ b/Part_3/handson_3/handson_3d.ipynb
@@ -107,11 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ced0fb8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Label'] = km.labels_\n",
+    "df.to_csv(\"driver_labelled.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
