--- a/Part_3/handson_3/handson_3d.ipynb
+++ b/Part_3/handson_3/handson_3d.ipynb
@@ -128,10 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d1944d72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn accuracy: 99.60%\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split as split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -140,8 +148,27 @@
     "y = df.values[:, -1]\n",
     "X_train, X_test, y_train, y_test = split(X, y, test_size=0.25, random_state=42)\n",
     "\n",
-    "knn = KNeighborsClassifier().fit(X_train, y_train)"
+    "knn = KNeighborsClassifier().fit(X_train, y_train)\n",
+    "print(f\"knn accuracy: {knn.score(X_test, y_test):.2%}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3a6cf229",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KNeighborsClassifier?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2f3730e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
